added support for object lookup

--- a/slc/synchronizer/CHANGES.txt
+++ b/slc/synchronizer/CHANGES.txt
@@ -1,7 +1,8 @@
 Todo
 
     * allow to remove credentials again
-
+    * cleanup of the uid registry when objects get deleted
+    
 1.0b2
 
     * Can synchronize basic atdocuments
