--- a/slc/synchronizer/CHANGES.txt
+++ b/slc/synchronizer/CHANGES.txt
@@ -3,6 +3,12 @@ Todo
     * allow to remove credentials again
     * cleanup of the uid registry when objects get deleted
     * implement a read only/read write policy for matched objects sync
+
+1.0
+
+    * UI cleanup
+    * Error handling in frontend and backend
+    
     
 1.0b2
 
