--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,10 @@ Todo
 - cleanup of the uid registry when objects get deleted
 - implement a read only/read write policy for matched objects sync
 
+slc.synchronizer 1.2.1 (2009-07-06)
+-----------------------------------
+
+- fixed tests (gerken)
 
 slc.synchronizer 1.2 (2009-06-17)
 ---------------------------------
