--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,44 +1,44 @@
 slc.synchronizer Changelog
 ==========================
 
-slc.synchronizer 1.2.2 (unreleased)
------------------------------------
+1.2.2 (unreleased)
+------------------
 
 - Added EUPL license (deroiste)
 - Keep track of last synchronisation [thomasw]
 
-slc.synchronizer 1.2.1 (2009-07-06)
------------------------------------
+1.2.1 (2009-07-06)
+------------------
 
 - fixed tests (gerken)
 
-slc.synchronizer 1.2 (2009-06-17)
----------------------------------
+1.2 (2009-06-17)
+----------------
 
 - fixed tests (gerken)
 
-slc.synchronizer 1.1 (2009-05-12)
----------------------------------
+1.1 (2009-05-12)
+----------------
 
 - Packaged egg (pilz)
 
 
-slc.synchronizer 1.0 (2008-06-31)
----------------------------------
+1.0 (2008-06-31)
+----------------
 
 - UI cleanup
 - Error handling in frontend and backend
     
     
-slc.synchronizer 1.0b1 (2008-04-31)
------------------------------------
+1.0b1 (2008-04-31)
+------------------
 
 - Can synchronize basic atdocuments
 - support for credentials, remembers credential keys annotated on objects
 - support for syncing related objects and translations
     
 
-slc.synchronizer 0.1 (2008-03-31)
----------------------------------
+0.1 (2008-03-31)
+----------------
 
 - Initial port
