--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 slc.synchronizer Changelog
 ==========================
 
+1.2.3 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 1.2.2 (2010-11-24)
 ------------------
 
