--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,7 @@
 slc.synchronizer Changelog
 ==========================
 
-1.2.7-gfb-hardcoded (unreleased)
+1.2.7-gfb-hardcoded (2013-05-16)
 --------------------------------
 
 - force https, fixes #7542 [thomasw]
