--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 slc.synchronizer Changelog
 ==========================
 
+1.2.8-gfb-hardcoded (unreleased)
+--------------------------------
+
+- Nothing changed yet.
+
+
 1.2.7-gfb-hardcoded (2013-05-16)
 --------------------------------
 
